--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -137,5 +137,12 @@
       "not.image": "File was expected to be an image but was found to be \"{{ fileType }}\""
     }
   },
-  "footer": "This is your footer"
+  "footer": "This is your footer",
+  "nav": {
+    "dashboard": "Dashboard",
+    "billiards": "Billiards",
+    "billiards-history": "Billiards History",
+    "employee": "Employee",
+    "customer": "Customer"
+  }
 }
