--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -170,6 +170,7 @@
     "billiards": "Bàn bida",
     "billiards-history": "Lịch sử bàn bida",
     "employee": "Nhân viên",
-    "customer": "Khách hàng"
+    "customer": "Khách hàng",
+    "product-history": "Lịch sử sản phẩm"
   }
 }
