--- a/src/main/webapp/i18n/vi/provider.json
+++ b/src/main/webapp/i18n/vi/provider.json
@@ -6,13 +6,15 @@
       "no": "STT",
       "name": "Tên",
       "phoneNumber": "Số điện thoại",
-      "note": "Số điện thoại",
+      "address": "Địa chỉ",
+      "note": "Ghi chú",
       "status": "Trạng thái"
     },
     "form": {
       "formTitle": "Thêm/sửa nhà cung cấp",
       "name": "Tên",
       "phoneNumber": "Số điện thoại",
+      "address": "Địa chỉ",
       "note": "Ghi chú",
       "status": "Trạng thái"
     }
