done history product

--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -173,7 +173,7 @@
     "billiards-history": "Lịch sử bàn bida",
     "employee": "Nhân viên",
     "customer": "Khách hàng",
-    "product-history": "Lịch sử sản phẩm",
+    "product-history": "Lịch sử nhập hàng",
     "provider": "Nhà cung cấp"
   }
 }
