--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -174,6 +174,7 @@
     "employee": "Nhân viên",
     "customer": "Khách hàng",
     "product-history": "Lịch sử nhập hàng",
-    "provider": "Nhà cung cấp"
+    "provider": "Nhà cung cấp",
+    "system": "Hệ thống"
   }
 }
