--- a/src/main/webapp/i18n/vi/global.json
+++ b/src/main/webapp/i18n/vi/global.json
@@ -175,6 +175,7 @@
     "customer": "Khách hàng",
     "product-history": "Lịch sử nhập hàng",
     "provider": "Nhà cung cấp",
+    "statistic": "Thống kê",
     "system": "Hệ thống"
   }
 }
